objects/FieloDRE__ObjectsToProcess__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FieloDRE__APINameObject__c</fullName>
        <description>API Name del Objeto a procesar</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API Name del Objeto a procesar</inlineHelpText>
        <label>Object API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloDRE__FieldMember__c</fullName>
        <description>Se debe completar con el Nombre de API del campo lookup a Member en el objeto que va a ser procesado</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Se debe completar con el Nombre de API del campo lookup a Member en el objeto que va a ser procesado</inlineHelpText>
        <label>Field Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloDRE__FieldProcessed__c</fullName>
        <description>Se debe completar con el Nombre de API del campo (Checkbox) en donde se va a indicar que el registro fue procesado por el DRE</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Se debe completar con el Nombre de API del campo (Checkbox) en donde se va a indicar que el registro fue procesado por el DRE</inlineHelpText>
        <label>FieldProcessed</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloDRE__FieldToRuleAppliedMasterLookup__c</fullName>
        <description>Se debe completar con el Nombre de API del campo lookup del objeto a procesar que se quiere copiar en el Padre del objeto &quot;Fielo Rule Applied&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Se debe completar con el Nombre de API del campo lookup del objeto a procesar que se quiere copiar en el Padre del objeto &quot;Fielo Rule Applied&quot;</inlineHelpText>
        <label>Field To Rule Applied Master Lookup</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloDRE__FieldTotalPoints__c</fullName>
        <description>Se debe completar con el Nombre de API del campo en donde van a ser almacenados el total de puntos que aplican para el registro</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Se debe completar con el Nombre de API del campo en donde van a ser almacenados el total de puntos que aplican para el registro</inlineHelpText>
        <label>Field Total Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloDRE__RuleAppliedMasterLookup__c</fullName>
        <description>Se debe completar con el Nombre de API del campo lookup al objeto a procesar en el objeto &quot;Fielo Rule Applied&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Se debe completar con el Nombre de API del campo lookup al objeto a procesar en el objeto &quot;Fielo Rule Applied&quot;</inlineHelpText>
        <label>Rule Applied Master Lookup</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloDRE__RuleRecordTypeDevName__c</fullName>
        <description>Se debe completar con el DeveloperName del objeto Rule que van a aplicar para el objeto a procesar</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Se debe completar con el DeveloperName del objeto Rule que van a aplicar para el objeto a procesar</inlineHelpText>
        <label>Rule Record Type Developer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Fielo Objects to process</label>
</CustomObject>